# target-bird

./: README.md  meltano.yml  pyproject.toml
sample_payload/: data.singer
target_bird/: client.py  sinks.py  target.py
target_bird/tests/: __init__.py  test_core.py
